# stephen

./: .ci.yml  .gitignore  README.md  pyproject.toml
example/: hen.step
src/: assembly.py  log.py  parser.py  part.py  paths.py  sourcefile.py  step_utils.py  stephen.py
stephen/: assembly.py  log.py  main.py  metadata.py  parser.py  part.py  paths.py  sourcefile.py
template/: bom.html  jetson-agx-thor-baseboard-enclosure.step
