[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stephen"
authors = [
    {name = "Antmicro", email="contact@antmicro.com"}
]
license = "Apache-2.0"

description = "STEPhen - STEP output job automation tool"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cadquery", "python-slugify", "pandas", "typer"
]

[project.scripts]
stephen = "stephen:app"

[tool.black]
line-length = 120
